Prevent text-overflow from being overly aggressive.

--- a/app/assets/stylesheets/_high-scores.sass
+++ b/app/assets/stylesheets/_high-scores.sass
@@ -170,7 +170,7 @@ $score-metric-width: 100px
             font-size: 11px
             font-weight: bold
             margin: -3px -50px -2px 0
-            padding: 4px 0 8px 9px
+            padding: 4px 0 8px 11px
             text-align: center
             text-shadow: 0 -1px 0 #1d7a19
             text-transform: uppercase
